Fix home button height spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -40,6 +40,7 @@
   font-size: 25px;
   display: flex;
   height: -webkit-fill-available;
+  margin-top: 5px;
  }
 
  #feedlogo:hover {
